.kube/datalens/datalens-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datalens
  namespace: datalens
