.kube/datalens/control-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: control-api
  name: control-api
  namespace: datalens
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: control-api
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: control-api
    spec:
      containers:
        - env:
            - name: BI_API_UWSGI_WORKERS_COUNT
              value: "4"
            - name: CONNECTOR_AVAILABILITY_VISIBLE
              value: clickhouse,postgres,chyt,ydb,mysql,greenplum,mssql,appmetrica_api,metrika_api
            - name: DL_CRY_ACTUAL_KEY_ID
              value: key_1
            - name: DL_CRY_KEY_VAL_ID_key_1
              value: h1ZpilcYLYRdWp7Nk8X1M1kBPiUi8rdjz9oBfHyUKIk=
            - name: RQE_FORCE_OFF
              value: "1"
            - name: RQE_SECRET_KEY
            - name: US_HOST
              value: http://us.datalens.svc.cluster.local:8083
            - name: US_MASTER_TOKEN
              value: fake-us-master-token
          image: ghcr.io/datalens-tech/datalens-control-api:0.2192.0
          name: datalens-control-api
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
