.kube/datalens/data-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: data-api
  name: data-api
  namespace: datalens
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: data-api
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: data-api
    spec:
      containers:
        - env:
            - name: BI_COMPENG_PG_ON
              value: "1"
            - name: BI_COMPENG_PG_URL
              value: postgresql://postgres:postgres@pg-compeng:5432/postgres
            - name: CACHES_ON
              value: "0"
            - name: DL_CRY_ACTUAL_KEY_ID
              value: key_1
            - name: DL_CRY_KEY_VAL_ID_key_1
              value: h1ZpilcYLYRdWp7Nk8X1M1kBPiUi8rdjz9oBfHyUKIk=
            - name: GUNICORN_WORKERS_COUNT
              value: "5"
            - name: MUTATIONS_CACHES_ON
              value: "0"
            - name: RQE_FORCE_OFF
              value: "1"
            - name: RQE_SECRET_KEY
            - name: US_HOST
              value: http://us.datalens.svc.cluster.local:8083
            - name: US_MASTER_TOKEN
              value: fake-us-master-token
          image: ghcr.io/datalens-tech/datalens-data-api:0.2192.0
          name: datalens-data-api
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
