.kube/datalens/datalens-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: datalens
  name: datalens
  namespace: datalens
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: datalens
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: datalens
    spec:
      containers:
        - env:
            - name: APP_ENV
              value: production
            - name: APP_INSTALLATION
              value: opensource
            - name: APP_MODE
              value: full
            - name: AUTH_POLICY
              value: disabled
            - name: BI_API_ENDPOINT
              value: http://control-api.datalens.svc.cluster.local:8080
            - name: BI_DATA_ENDPOINT
              value: http://data-api.datalens.svc.cluster.local:8080
            - name: HC
              value: "1"
            - name: NODE_EXTRA_CA_CERTS
              value: /usr/local/share/ca-certificates/cert.pem
            - name: US_ENDPOINT
              value: http://us.datalens.svc.cluster.local:8083
            - name: US_MASTER_TOKEN
              value: fake-us-master-token
          image: ghcr.io/datalens-tech/datalens-ui:0.2601.0
          name: datalens-ui
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
