.kube/datalens/pg-compeng-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pg-compeng
  name: pg-compeng
  namespace: datalens
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pg-compeng
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: pg-compeng
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: postgres:16-alpine
          name: datalens-pg-compeng
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
