.kube/datalens/pg-us-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pg-us
  name: pg-us
  namespace: datalens
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pg-us
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: pg-us
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: us-db-ci_purgeable
            - name: POSTGRES_PASSWORD
              value: us
            - name: POSTGRES_USER
              value: us
          image: postgres:16-alpine
          name: datalens-pg-us
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-us-claim0
      restartPolicy: Always
      volumes:
        - name: pg-us-claim0
          persistentVolumeClaim:
            claimName: pg-us-claim0
