.kube/datalens/us-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: us
  name: us
  namespace: datalens
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: us
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: us
    spec:
      containers:
        - env:
            - name: APP_ENV
              value: prod
            - name: APP_INSTALLATION
              value: opensource
            - name: HC
              value: "1"
            - name: MASTER_TOKEN
              value: fake-us-master-token
            - name: POSTGRES_DSN_LIST
              value: postgres://us:us@pg-us.datalens.svc.cluster.local:5432/us-db-ci_purgeable
            - name: SKIP_INSTALL_DB_EXTENSIONS
              value: "0"
          image: ghcr.io/datalens-tech/datalens-us:0.310.0
          name: datalens-us
          ports:
            - containerPort: 8083
              protocol: TCP
      restartPolicy: Always
