.kube/datalens/datalens-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: datalens
  name: datalens
  namespace: datalens
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: datalens
