.kube/datalens/pg-compeng-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace datalens -f docker-compose --pvc-request-size 500Mi
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pg-compeng
  name: pg-compeng
  namespace: datalens
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: pg-compeng
