.kube/datalens/datalens-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datalens
  namespace: datalens
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-certificate
spec:
  ingressClassName: traefik
  tls:
    - secretName: datalens.zakupai.letsencrypt.key.tls
      hosts:
        - datalens.xn----7sbbznd9a5a.xn--p1ai
  rules:
  - host: datalens.xn----7sbbznd9a5a.xn--p1ai
    http:
      paths:
        - backend:
            service:
              name: datalens
              port:
                number: 80
          pathType: ImplementationSpecific
